--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://yyh-96.github.io
+url: https://mazhuang.org
 date_format: "ordinal"
 title: 尹耀辉
-subtitle: "Life is short, use python"
-description: "yyh的个人博客"
-keywords: Zhuang Ma, mzlogin, mazhuang
+subtitle: "打码改变人生"
+description: "马壮的个人博客"
+keywords: 码志, Zhuang Ma, mzlogin, mazhuang
 timezone: Asia/Hangzhou
 encoding: "utf-8"
 side_bar_repo_limit: 5
@@ -18,9 +18,9 @@ side_bar_repo_limit: 5
 author: Yin Yaohui
 organization: 
 organization_url: 
-github_username: yyh-96
+github_username: mzlogin
 location: Hangzhou, China
-email: zjuyyh@qq.com
+email: chumpma@gmail.com
 
 # ---------------- #
 #    Navigation    #
@@ -81,7 +81,7 @@ collections:
         output: true
         permalink: /wiki/:path/
 
-repository: yyh-96/yyh-96.github.io
+repository: mzlogin/mzlogin.github.io
 
 # ---------------- #
 #      Comments    #
