--- a/_config.yml
+++ b/_config.yml
@@ -102,10 +102,10 @@ gitment:
         client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: mzlogin
+    owner: yyh-96
     repo: blog-comments
-    clientID: d2e1cbbd298958076462
-    clientSecret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
+    clientID: 5fe066aba6fca88b7bd5
+    clientSecret: 1f395407be57da7b7714641ac5770468769358b9
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
