--- a/_config.yml
+++ b/_config.yml
@@ -96,14 +96,14 @@ disqus:
 # https://imsun.net/posts/gitment-introduction/
 gitment:
     owner: mzlogin
-    repo: blog-comments
+    repo: yyh-96.github.io
     oauth:
         client_id: d2e1cbbd298958076462
         client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: blog
-    repo: blog-comments
+    repo: yyh-96.github.io
     clientID: 5fe066aba6fca88b7bd5
     clientSecret: 1f395407be57da7b7714641ac5770468769358b9
 # 在使用其它评论组件时可点击显示 Disqus
