--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ baseurl:
 url: https://yyh-96.github.io
 date_format: "ordinal"
 title: 尹耀辉
-subtitle: "Life is short, use python"
+subtitle: "Life is short, I love python"
 description: "yyh的个人博客"
-keywords: Zhuang Ma, mzlogin, mazhuang
+keywords: yyh, yyh-96, 尹耀辉
 timezone: Asia/Hangzhou
 encoding: "utf-8"
 side_bar_repo_limit: 5
