--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: https://yyh-96.github.io
 date_format: "ordinal"
-title: 尹耀辉
+title: Yin yaohui
 subtitle: "Life is short, I love python"
 description: "yyh的个人博客"
 keywords: yyh, yyh-96, 尹耀辉
