--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://yyh-96.github.io
 date_format: "ordinal"
 title: Yin yaohui
-subtitle: "Life is short, I love python"
+subtitle: "Python amateur"
 description: "yyh的个人博客"
 keywords: yyh, yyh-96, 尹耀辉
 timezone: Asia/Hangzhou
